--- a/Assets/Scripts/Planet/Flawless.Planets.asmdef
+++ b/Assets/Scripts/Planet/Flawless.Planets.asmdef
@@ -1,12 +1,10 @@
 {
-    "name": "Flawless.PlayerCharacter",
+    "name": "Flawless.Planets",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:0fde01cb56a3d954c91c94d0055e69f3",
         "GUID:8ce1f587648cbbb4996aa79c1f1f40cd",
         "GUID:b50e3ad1cf668b2409bcc3447058e42d",
-        "GUID:af0d184ea436b554db07112c1d27294f"
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
